@@ -18,10 +18,10 @@
 
 bl_info = {
 	'name': 'BsMax',
-	'description': 'BsMax for Blender 2.80 ~ 2.93',
+	'description': 'BsMax for Blender 2.80 ~ 3.0',
 	'author': 'Naser Merati (Nevil)',
-	'version': (0, 1, 0, 20210411),
-	'blender': (2, 80, 0),# 2.80~2.93
+	'version': (0, 1, 0, 20210418),
+	'blender': (2, 80, 0),# 2.80 ~ 3.0
 	'location': 'Almost Everywhere in Blender',
 	'wiki_url': 'https://github.com/NevilArt/BsMax_2_80/wiki',
 	'doc_url': 'https://github.com/NevilArt/BsMax_2_80/wiki',
