@@ -24,7 +24,8 @@ from bsmax.keymaps import KeyMaps
 # [] Undo rido only camera
 
 def add_search(km,space):
-	if bpy.app.version[1] < 90:
+	ver = bpy.app.version
+	if ver[0] == 2 and ver[1] < 90:
 		km.new(space,'wm.search_menu','X','PRESS',[])
 	else:
 		km.new(space,'wm.search_menu','X','PRESS',[],ctrl=True,shift=True,alt=True)
