@@ -29,7 +29,8 @@ class View3D_OT_Transform_Gizmo_Size(Operator):
 		return ctx.area.type == 'VIEW_3D'
 
 	def execute(self, ctx):
-		if bpy.app.version[1] < 81:
+		ver = bpy.app.version
+		if ver[0] == 2 and ver[1] < 81:
 			ctx.user_preferences.view.gizmo_size += self.step
 		else:
 			ctx.preferences.view.gizmo_size += self.step
